testsuite/tests/properties/invalid_lambda_arg_type/filter_no_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items
        .filter((e: Int) => e != 0)
        .map((e: Example) => e.as_bare_entity)
}
